Updates version and release notes

--- a/src/Microsoft.Graph/Microsoft.Graph.csproj
+++ b/src/Microsoft.Graph/Microsoft.Graph.csproj
@@ -25,11 +25,10 @@
     <!-- VersionPrefix minor version should not be set when the change comes from the generator. It will be updated automatically. -->
     <!-- VersionPrefix minor version must be manually set when making manual changes to code. -->
     <!-- VersionPrefix major and patch versions must be manually set. -->
-    <VersionSuffix>preview.6</VersionSuffix>
+    <VersionSuffix>preview.7</VersionSuffix>
     <PackageReleaseNotes>
-- Fixes exceptions on deserialization of payload that do not have @odata.type
-- Fixes instances with missing key values for path parameters
-- Adds missing odata cast paths to enable requests for specific kind of objects
+- Latest metadata updates from 7th June snapshot
+- Adds missing odata cast paths for places API
     </PackageReleaseNotes>
     <PublishRepositoryUrl>true</PublishRepositoryUrl>
     <EmbedUntrackedSources>true</EmbedUntrackedSources>
