--- a/src/Microsoft.Graph/Microsoft.Graph.csproj
+++ b/src/Microsoft.Graph/Microsoft.Graph.csproj
@@ -27,7 +27,7 @@
     <!-- VersionPrefix major and patch versions must be manually set. -->
     <VersionSuffix>preview.8</VersionSuffix>
     <PackageReleaseNotes>
-- Latest metadata updates from 14th June 2022 snapshot
+- Latest metadata updates from 21st June 2022 snapshot
 - Fixed missing derived models not directly referenced in openApi paths
     </PackageReleaseNotes>
     <PublishRepositoryUrl>true</PublishRepositoryUrl>
@@ -53,7 +53,7 @@
     <EmbeddedResource Include="Properties\Graph.rd.xml" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.Graph.Core" Version="3.0.0-preview.8" />
+    <PackageReference Include="Microsoft.Graph.Core" Version="3.0.0-preview.9" />
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" PrivateAssets="All" />
   </ItemGroup>
   <ItemGroup>
