--- a/src/Microsoft.Graph/Microsoft.Graph.csproj
+++ b/src/Microsoft.Graph/Microsoft.Graph.csproj
@@ -25,11 +25,10 @@
     <!-- VersionPrefix minor version should not be set when the change comes from the generator. It will be updated automatically. -->
     <!-- VersionPrefix minor version must be manually set when making manual changes to code. -->
     <!-- VersionPrefix major and patch versions must be manually set. -->
-    <VersionSuffix>preview.9</VersionSuffix>
+    <VersionSuffix>preview.10</VersionSuffix>
     <PackageReleaseNotes>
-- Latest metadata updates from 12th July 2022 snapshot
-- Fixed incorrect casing of some properties on serialization [#483]
-- Adds support for cancellation token support on large file uploads.
+- Latest metadata updates from 19th July 2022 snapshot
+- Fix missing @odata.type properties in models
     </PackageReleaseNotes>
     <PublishRepositoryUrl>true</PublishRepositoryUrl>
     <EmbedUntrackedSources>true</EmbedUntrackedSources>
