--- a/src/Microsoft.Graph/Microsoft.Graph.csproj
+++ b/src/Microsoft.Graph/Microsoft.Graph.csproj
@@ -27,9 +27,10 @@
     <!-- VersionPrefix major and patch versions must be manually set. -->
     <VersionSuffix>preview.14</VersionSuffix>
     <PackageReleaseNotes>
-- Adds OdataDeltaLink property to collection responses for delta
-- Changes the ResponeHandler parameter in request builders to be a RequestOption in dotnet [#1858](https://github.com/microsoft/kiota/issues/1858)
-- Latest metadata updates from 18th October 2022 snapshot
+- Adds baseUrl parameter to GraphServiceClient constructor to allow for easier updating of target endpoint
+- Adds ItemWithPath for request builder to enable path retrieval of drive items
+- Fix for default OdataType property in models causing errors from the API
+- Latest metadata updates from 22nd November 2022 snapshot
     </PackageReleaseNotes>
     <PublishRepositoryUrl>true</PublishRepositoryUrl>
     <EmbedUntrackedSources>true</EmbedUntrackedSources>
@@ -54,7 +55,7 @@
     <EmbeddedResource Include="Properties\Graph.rd.xml" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.Graph.Core" Version="3.0.0-preview.16" />
+    <PackageReference Include="Microsoft.Graph.Core" Version="3.0.0-preview.17" />
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" PrivateAssets="All" />
   </ItemGroup>
   <ItemGroup>
