--- a/.azure-pipelines/ci-build.yml
+++ b/.azure-pipelines/ci-build.yml
@@ -24,6 +24,18 @@ steps:
   inputs:
     debugMode: false
 
+- task: UseDotNet@2
+  displayName: 'Use .NET sdk'
+  inputs:
+    packageType: sdk
+    version: 6.x
+
+- task: UseDotNet@2
+  displayName: 'Use .NET 2.x (for code signing tasks)'
+  inputs:
+    packageType: sdk
+    version: 2.x
+    
 - task: DotNetCoreCLI@2
   displayName: 'dotnet restore'
   inputs:
