--- a/src/Microsoft.Graph/Microsoft.Graph.csproj
+++ b/src/Microsoft.Graph/Microsoft.Graph.csproj
@@ -25,12 +25,12 @@
     <!-- VersionPrefix minor version should not be set when the change comes from the generator. It will be updated automatically. -->
     <!-- VersionPrefix minor version must be manually set when making manual changes to code. -->
     <!-- VersionPrefix major and patch versions must be manually set. -->
-    <VersionSuffix>preview.14</VersionSuffix>
+    <VersionSuffix>rc.1</VersionSuffix>
     <PackageReleaseNotes>
-- Adds baseUrl parameter to GraphServiceClient constructor to allow for easier updating of target endpoint
-- Adds ItemWithPath for request builder to enable path retrieval of drive items
-- Fix for default OdataType property in models causing errors from the API
-- Latest metadata updates from 22nd November 2022 snapshot
+- Release candidate 1
+- Adds support for multi-value headers
+- Fixes Guid types represented as strings
+- Latest metadata updates from 14th December 2022 snapshot
     </PackageReleaseNotes>
     <PublishRepositoryUrl>true</PublishRepositoryUrl>
     <EmbedUntrackedSources>true</EmbedUntrackedSources>
