--- a/src/Microsoft.Graph/Microsoft.Graph.csproj
+++ b/src/Microsoft.Graph/Microsoft.Graph.csproj
@@ -25,12 +25,9 @@
     <!-- VersionPrefix minor version should not be set when the change comes from the generator. It will be updated automatically. -->
     <!-- VersionPrefix minor version must be manually set when making manual changes to code. -->
     <!-- VersionPrefix major and patch versions must be manually set. -->
-    <VersionSuffix>rc.2</VersionSuffix>
+    <VersionSuffix>rc.3</VersionSuffix>
     <PackageReleaseNotes>
-- Release candidate 2
-- [Breaking] Renames `CreateXXXRequestInformation` methods to `ToXXXRequestInformation
-- Adds `IAuthenticationProvider` parameter to GraphServiceClient constructor taking a httpClient instance.
-- Latest metadata updates from 12th January 2023 snapshot
+        - Fixed a regression where passing custom base url would not be reflected in the requests.
     </PackageReleaseNotes>
     <PublishRepositoryUrl>true</PublishRepositoryUrl>
     <EmbedUntrackedSources>true</EmbedUntrackedSources>
